# ifc2lbd

./: .gitignore  README.md  pyproject.toml
src/: cli.py  main.py
src/handling_logging/: logger_configuration.py  logging_config.json  logging_setup.py
src/ifc/: __init__.py  ifc_options.py
src/ifc2lbd/: __init__.py  convert.py
src/lbd/: TTL_writer_strings_spf.py  TTL_writer_strings_stream.py  __init__.py
test_files/: InfraBridge.ifc
